--- a/meu_cronograma/pubspec.yaml
+++ b/meu_cronograma/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   mobx_codegen: ^2.0.4
   modular_test: ^1.0.1+1
+  build_runner: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
